Fixed Safari spacing problem

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -193,6 +193,7 @@ a:focus {
 .ordering-list {
 	margin-top: 20px;
 	padding-top: 36px;
+	margin-bottom: 100px;
 }
 
 .people-list {
@@ -375,7 +376,7 @@ footer {
 	opacity: 0.2;
 }
 
-.running-list,.runned-list {
+.runned-list {
 	margin-bottom: 100px;
 }
 
